materials not updated correctly after collada import #86314

Closed
opened 2021-03-05 16:59:18 +01:00 by Damien Demars · 16 comments

System Information
Operating system: windows 10
Graphics card: geforce gtx 1060

Blender Version
Broken: 2.92 release

Short description of error
all materials render black in cycles after collada import

Exact steps for others to reproduce the error

I can't join a scene reproducing the problem because if a save a scene with the problem then re open it, the problem disappear.

steps to reproduce are simple :
take the default .blend scene with the cube :

  • exported to a collada file (selection only : just the cube)
  • deleted from the default scene
  • imported back from collada file

in the "shader editor" view, the cube's material is correctly displayed

but in the "material properties" tab the cube's material is displayed with Surface : "None" instead of expected surface : "Principled BSDF"

Cycles rendering is affected (cube render black) while EEVEE rendering display the correct material

interacting with the material in the "Shader editor" UI can bring the material back to a fully initialised state :

  just start to click on an empty link, start to draw a line then release mouse...  is enough to update the material.
  another way to repair is just to save and re open the scene.

as collada importer seems to setup material properties correctly (as seen in shader editor view)
I think it can be more a blender refresh/update bug than a addon (collada) bug. (but I'm not sure of that..)

**System Information** Operating system: windows 10 Graphics card: geforce gtx 1060 **Blender Version** Broken: 2.92 release **Short description of error** all materials render black in cycles after collada import **Exact steps for others to reproduce the error** I can't join a scene reproducing the problem because if a save a scene with the problem then re open it, the problem disappear. steps to reproduce are simple : take the default .blend scene with the cube : - exported to a collada file (selection only : just the cube) - deleted from the default scene - imported back from collada file in the "shader editor" view, the cube's material is correctly displayed but in the "material properties" tab the cube's material is displayed with Surface : "None" instead of expected surface : "Principled BSDF" Cycles rendering is affected (**cube render black**) while EEVEE rendering display the correct material interacting with the material in the "Shader editor" UI can bring the material back to a fully initialised state : ``` just start to click on an empty link, start to draw a line then release mouse... is enough to update the material. another way to repair is just to save and re open the scene. ``` as collada importer seems to setup material properties correctly (as seen in shader editor view) I think it can be more a blender refresh/update bug than a addon (collada) bug. (but I'm not sure of that..)
Author

Added subscriber: @DamienDemars

Added subscriber: @DamienDemars
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.
Philipp Oeser self-assigned this 2021-03-23 16:17:22 +01:00
Member

Got a fix.

Got a fix.

This issue was referenced by 6b18678e34

This issue was referenced by 6b18678e34bfbe2e95430fa7491ed1d3fad4ff3a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Contributor

Added subscriber: @scurest

Added subscriber: @scurest
Contributor

I think this problem still exists for links created after the ntreeUpdateTree call, eg. links to texture nodes. If you import a .dae with a texture you get the same symptoms:

bad_000.png

Should the ntreeUpdateTree call be moved to the end, after all the set_diffuse/etc calls?

I think this problem still exists for links created after the `ntreeUpdateTree` call, eg. links to texture nodes. If you import a .dae with a texture you get the same symptoms: ![bad_000.png](https://archive.blender.org/developer/F10047348/bad_000.png) Should the `ntreeUpdateTree` call be moved to the end, after all the `set_diffuse`/etc calls?
Contributor
@lichtwerk
Member

Checking again.

Checking again.

This issue was referenced by a1069b6c66

This issue was referenced by a1069b6c662ffbeba0457164c3ec831678b25fd4
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Added subscriber: @TheGremanCharizard

Added subscriber: @TheGremanCharizard

Can Confirm too.
Same Problem here.
#88062

{F10055309, size=full}

{F10055308, size=full}

Can Confirm too. Same Problem here. #88062 {[F10055309](https://archive.blender.org/developer/F10055309/DAE_BUG.PNG), size=full} {[F10055308](https://archive.blender.org/developer/F10055308/DAE_BUG_2.png), size=full}
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86314
No description provided.